<resources>
    <string name="app_name">Regime</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="register_account">CREATE ACCOUNT</string>
    <string name="register_login">LOG IN</string>
    <string name="register_fresh">Fresh</string>
    <string name="register_detail">Fresh, local, all natural ingrdients</string>
    <string name="resister_story">Read Our Story</string>
    <string name="menu_home">Home</string>
    <string name="menu_simpleMenu">Simple Menu</string>
    <string name="menu_diet">Diet Analysis</string>
    <string name="menu_more">More</string>
    <string name="main_week_title">On the menu this week</string>
    <string name="main_welcome_title">WELCOME TO REGIME</string>
    <string name="language_button_title">SELECT YOUR LANGUAGE</string>
    <string name="slideimage_title">How It Works</string>
    <string name="slideimage_detail">Simply heat your meal as needed and enjoy whenever you ready</string>
    <string name="title_activity_maps">Map</string>
    <string name="day">Day</string>
    <string name="calender">Android Custom Calendar</string>
    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>

    <string-array name="array_name">
        <item>Array Item One</item>
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
</resources>
