<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/menu_home"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_menu"
        android:enabled="true"
        android:icon="@drawable/cart_icon"
        android:title="@string/menu_simpleMenu"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_analysis"
        android:enabled="true"
        android:icon="@drawable/diet_icon"
        android:title="@string/menu_diet"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_more"
        android:enabled="true"
        android:icon="@drawable/more_icon"
        android:title="@string/menu_more"
        app:showAsAction="always|withText" />
</menu>