<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:enabled="true"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/action_menu"
            android:enabled="true"
            android:icon="@drawable/cart_icon"
            android:title="@string/menu_simpleMenu" />
        <item
            android:id="@+id/action_analysis"
            android:enabled="true"
            android:icon="@drawable/diet_icon"
            android:title="@string/menu_diet" />
        <item
            android:id="@+id/action_more"
            android:enabled="true"
            android:icon="@drawable/more_icon"
            android:title="@string/menu_more" />
    </group>

   <!-- <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
