<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="app.regime.com.ui.activity.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_gravity="top"
        android:src="@drawable/logo"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/food_icon"
            android:scaleType="fitCenter"
            android:padding="10dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_register_fresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_fresh"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_register_detail"
                android:layout_below="@+id/tv_register_fresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_detail"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"/>
            
            <Button
                android:text="@string/resister_story"
                android:layout_centerHorizontal="true"
                android:background="@drawable/register_story_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:layout_marginBottom="30dp"
                />
        </RelativeLayout>


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.34"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/btn_register_account"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/theme_corner_button"
            android:textColor="@android:color/white"
            android:text="@string/register_account"
            />

        <Button
            android:id="@+id/btn_register_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/lightgrey_corner_button"
            android:text="@string/register_login"/>

    </LinearLayout>

</LinearLayout>
